fix: align the file name for attachments - MEED-8957 - Meeds-io/MIPs#163

--- a/webapp/src/main/webapp/css/matrix.less
+++ b/webapp/src/main/webapp/css/matrix.less
@@ -211,6 +211,7 @@
       .message-file {
         max-width: 320px !important;
         .message-file-name {
+          line-height: 28px;
           &:hover {
             text-decoration: underline;
           }
@@ -224,6 +225,7 @@
       .message-file {
         max-width: 304px !important;
         .message-file-name {
+          line-height: 28px;
           &:hover {
             text-decoration: underline;
           }
